crates/uitest/fixtures/ty_check/event_topic0_ctfe_failure.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/event_topic0_ctfe_failure.fe
---
error[8-0089]: failed to evaluate constant `TOPIC0`
   ┌─ event_topic0_ctfe_failure.fe:31:1
   │
31 │ ╭ #[event]
32 │ │ struct Broken {
33 │ │     value: Bad,
34 │ │ }
   │ ╰─^ `TOPIC0` from generated `#[event]` implementation failed during compile-time evaluation
